migrated to androidx and login screen removed from app startup

--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context="com0.example.android.bouncingmessengertestapp.GroupActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/group_members"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
